# cmid-transformer-rag-medqa

./: .gitignore  README.md  pyproject.toml  requirements.txt
checkpoints/: README.md
data/kb/: generated_answers.json
data/processed/: entities_nonempty.json  extracted_treatment_questions.json
docs/: data_notice.md  presentation_summary.md
reports/: final_metrics.md
reports/experiments/bert/: final_metrics_bert.md
reports/experiments/v2/: final_metrics_v2.md
scripts/: build_knowledge_base.py  demo_rag.py  inspect_model_structure.py  train_eval.py
src/cmid_qa/: __init__.py  custom_encdec.py  data.py  losses.py  model.py  retrieval.py  visualization.py
